implement core logic

--- a/fixtures/test.yaml
+++ b/fixtures/test.yaml
@@ -28,3 +28,9 @@ todo:
   res:
     skip_headers:
       - report-to
+      - date
+      - x-ratelimit-reset
+      - cf-ray
+      - server-timing
+    skip_body:
+      - id
