--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,14 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.69"
 clap = { version = "4.1.8", features = ["derive"] }
+console = "0.15.5"
+http = "0.2.9"
 http-serde = "1.1.2"
-reqwest = "0.11.14"
+reqwest = {version = "0.11.14", default-features = false, features = ["rustls-tls"]}
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.94"
+serde_urlencoded = "0.7.1"
 serde_yaml = "0.9.19"
-similar = "2.2.1"
-tokio = { version = "1.26.0", features = ["fs", "rt", "macros", "rt-multi-thread"] }
+similar = { version = "2.2.1", features = ["inline"] }
+tokio = { version = "1.26.0", features = ["full"] }
 url = { version = "2.3.1", features = ["serde"] }
