--- a/fixtures/test.yaml
+++ b/fixtures/test.yaml
@@ -25,12 +25,12 @@ todo:
     url: https://jsonplaceholder.typicode.com/todos/2
     params:
       c: 200
-  res:
-    skip_headers:
-      - report-to
-      - date
-      - x-ratelimit-reset
-      - cf-ray
-      - server-timing
-    skip_body:
-      - id
+  # res:
+  #   skip_headers:
+  #     - report-to
+  #     - date
+  #     - x-ratelimit-reset
+  #     - cf-ray
+  #     - server-timing
+  #   skip_body:
+  #     - id
