--- a/fixtures/test.yaml
+++ b/fixtures/test.yaml
@@ -6,6 +6,7 @@ rust:
       user-agent: Aloha
     params:
       hello: world
+    body: abd
   req2:
     method: GET
     url: https://www.rust-lang.org/
