--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.69"
 clap = { version = "4.1.8", features = ["derive"] }
 console = "0.15.5"
+dialoguer = "0.10.3"
 http = "0.2.9"
 http-serde = "1.1.2"
 reqwest = {version = "0.11.14", default-features = false, features = ["rustls-tls"]}
