--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,6 @@ serde_json = "1.0.94"
 serde_urlencoded = "0.7.1"
 serde_yaml = "0.9.19"
 similar = { version = "2.2.1", features = ["inline"] }
+syntect = "5.0.0"
 tokio = { version = "1.26.0", features = ["full"] }
 url = { version = "2.3.1", features = ["serde"] }
